# domtree

./: .gitignore  .pre-commit-config.yaml  README.md  generate_stubs.py  mozilla.py  pyproject.toml  setup.py
.github/workflows/: wheels.yml
domtree/: __init__.py  node.py  svg_stubs.py  test.py
src/domtree/: node.py  svg.py  svg_stubs.py  test.py
tests/: test_domtree.py
