[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "domtree"
description = "DOM Tree syntax for python"
version = "0.0.5"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = ["typing_extensions>4"]
optional-dependencies = { test = ["pytest"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
